Website and Social Media Data Entry.

--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -1,15 +1,27 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>title:</b>
-  <%= @proposal.title %>
-</p>
-
-<p>
-  <b>Content:</b>
-  <%=raw @proposal.content %>
-</p>
 
 
-<%= link_to 'Edit', edit_proposal_path(@proposal) %> |
-<%= link_to 'Back', proposals_path %>
+<div class="row">
+  <div class="container form_panel">
+
+      <div class="panel panel-success">
+
+        <div class="panel-heading">
+          <h4><%= @proposal.title %></h4>
+        </div>
+
+        <div class="panel-body">
+          <div style="padding-left: 12px;padding-top: 8px;padding-right: 4px;">
+            <b class="pull-left">Content:</b>
+            </br>
+            <%=raw @proposal.content %>
+          </div>
+        </div>
+
+        <%= link_to 'Back', proposals_path, class:"btn btn-primary pull-left",type:"button" %>
+        <%= link_to 'Edit', edit_job_path(@proposal), class:"btn btn-success pull-right",type:"button" %>
+      </div>
+  </div>
+</div>
+
+
+
