Website and Social Media Data Entry.

--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -18,7 +18,7 @@
         </div>
 
         <%= link_to 'Back', proposals_path, class:"btn btn-primary pull-left",type:"button" %>
-        <%= link_to 'Edit', edit_job_path(@proposal), class:"btn btn-success pull-right",type:"button" %>
+        <%= link_to 'Edit', edit_proposal_path(@proposal), class:"btn btn-success pull-right",type:"button" %>
       </div>
   </div>
 </div>
