--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,26 +1,38 @@
 <div class="row">
-  <div class="container">
+  <div class="container form_panel">
 
-    <h2>Sign up</h2>
+    <div class="panel panel-info form-bs">
+      <div class="panel-heading">
+        <h4>Sign up</h4>
+      </div>
+      <div class="panel-body">
+        <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+            <%= devise_error_messages! %>
+            <p><%= f.label :name %><br/>
+              <%= f.text_field :name %></p>
 
-    <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-        <%= devise_error_messages! %>
-        <p><%= f.label :name %><br/>
-          <%= f.text_field :name %></p>
+            <div><%= f.label :email %><br/>
+              <%= f.email_field :email %></div>
 
-        <div><%= f.label :email %><br/>
-          <%= f.email_field :email %></div>
+            <div><%= f.label :password %><br/>
+              <%= f.password_field :password %></div>
 
-        <div><%= f.label :password %><br/>
-          <%= f.password_field :password %></div>
+            <div><%= f.label :password_confirmation %><br/>
+              <%= f.password_field :password_confirmation %></div>
 
-        <div><%= f.label :password_confirmation %><br/>
-          <%= f.password_field :password_confirmation %></div>
+            <div><%= f.submit "Sign up" %></div>
+        <% end %>
+      </div>
 
-        <div><%= f.submit "Sign up" %></div>
-    <% end %>
-
-    <%= render "devise/shared/links" %>
+      <%= render "devise/shared/links" %>
+    </div>
 
   </div>
 </div>
+
+
+
+
+
+
+
