--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -14,6 +14,7 @@
           <th>Description</th>
           <th>Duration</th>
           <th>Price</th>
+          <th>From</th>
           <th>Status</th>
           <th>Type</th>
           <th>Show</th>
@@ -35,6 +36,7 @@
                 <%= job.enddate %>
               </td>
               <td><%= job.price %></td>
+              <td><%= job.from %></td>
               <td><%= job.status %></td>
               <td><%= job.jobtype %></td>
               <td>
