--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -10,6 +10,7 @@
 
           <p>
             <b>Status: </b><%= @job.status %>
+            <b>From: </b><%= @job.from %>
             <b>type: </b><%= @job.jobtype %>
             <span aria-hidden="true"></span>
             <a href="<%= @job.url %>"> View Job Posting </a>
