--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
 <body class="full-page-base-style" style="position: relative;" >
 <div class="course-page course-theme-red web_dev">
   <%= render 'layouts/navigation' %>
+  <%= render 'layouts/messages' %>
   <%= yield %>
 </div>
 
