--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,8 +1,12 @@
-<% flash.each do |name, msg| %>
-    <% if msg.is_a?(String) %>
-        <%= content_tag :div, msg, :id => "flash_#{name}" %>
-    <% end %>
-<% end %>
+<div class="row">
+
+  <% flash.each do |name, msg| %>
+      <% if msg.is_a?(String) %>
+          <%= content_tag :div, msg, :id => "flash_#{name}" %>
+      <% end %>
+  <% end %>
+
+</div>
 
 
 <div class="row">
@@ -15,7 +19,7 @@
 
 <div class="row">
   <div class="container">
-    <div id="messagePanel" class="row" >
+    <div id="messagePanel" class="row">
 
       <!--<div class="alert alert-success fade in">-->
       <!--<button class="close" data-dismiss="alert">×</button>-->
