--- a/app/views/itunes/index.html.erb
+++ b/app/views/itunes/index.html.erb
@@ -12,7 +12,7 @@
 
       <div class="crawl-info-form cif-box">
         <div class="cif-inner">
-          <h2 id="crawledItemCount">0</h2>
+          <h2 id="crawledItemCount"><%= number_with_delimiter(@count) %></h2>
           <p>Crawled Items</p>
         </div>
         <button id="exportButton" type="button" class="btn btn-success cif-button" data-loading-text="Exporting...">
@@ -25,7 +25,7 @@
 
   <div class="row" id="cases-table">
 
-    <table  class="table table-striped table-bordered" cellspacing="0" width="100%">
+    <table class="table table-striped table-bordered" cellspacing="0" width="100%">
       <thead>
       <tr>
         <th>App</th>
@@ -75,9 +75,9 @@
 
 
 <script type="text/javascript" charset="utf-8">
-  (function() {
+  (function () {
 
-    $(document).ready(function() {
+    $(document).ready(function () {
       setInterval(fetchCrawledCount, 1000);
     });
 
