--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -13,18 +13,18 @@
     <div class="panel-body">
 
       <!-- Table -->
-      <table class="table table-striped table-bordered" cellspacing="0" width="100%">
+      <table class="table table-striped table-bordered" cellspacing="0">
         <thead>
         <tr>
-          <th>Title</th>
-          <th>Customer</th>
-          <th>Description</th>
-          <th>Duration</th>
-          <th>Price</th>
-          <th>From</th>
-          <th>Status</th>
-          <th>Type</th>
-          <th>Show</th>
+          <th class="col-sm-1">Title</th>
+          <th class="col-sm-1">Customer</th>
+          <th class="col-sm-1">Description</th>
+          <th class="col-sm-1">Duration</th>
+          <th class="col-sm-1">Price</th>
+          <th class="col-sm-1">From</th>
+          <th class="col-sm-1">Status</th>
+          <th class="col-sm-1">Type</th>
+          <th class="col-sm-2">Show</th>
         </tr>
         </thead>
 
