--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -16,15 +16,14 @@
       <table class="table table-striped table-bordered" cellspacing="0">
         <thead>
         <tr>
-          <th class="col-sm-1">Title</th>
-          <th class="col-sm-1">Customer</th>
-          <th class="col-sm-1">Description</th>
-          <th class="col-sm-1">Duration</th>
-          <th class="col-sm-1">Price</th>
-          <th class="col-sm-1">From</th>
-          <th class="col-sm-1">Status</th>
-          <th class="col-sm-1">Type</th>
-          <th class="col-sm-2">Show</th>
+          <th>Title</th>
+          <th>Customer</th>
+          <th>Duration</th>
+          <th>Price</th>
+          <th>From</th>
+          <th>Status</th>
+          <th>Type</th>
+          <th>Show</th>
         </tr>
         </thead>
 
@@ -34,9 +33,12 @@
                 <%= link_to job.url do %>
                     <%= job.title %>
                 <% end %>
+                <div class="description" style="display: none">
+                  <%= raw job.description %>
+                </div>
               </td>
               <td><%= job.customer %></td>
-              <td><%= raw job.description %></td>
+
               <td>
                 <%= job.startdate %>
                 -
