--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,6 +9,7 @@ $icon-font-path: "bootstrap-sass/assets/fonts/bootstrap/";
 @import 'bootstrap-custom';
 
 @import "bootstrap-datepicker3";
+@import "devise_bootstrap_views";
 
 @import "font-awesome-sprockets";
 @import "font-awesome";
