--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,38 +1,36 @@
+
+
 <div class="row">
-  <div class="container form_panel">
+  <div class="container">
+    <%= bootstrap_devise_error_messages! %>
 
-    <div class="panel panel-info form-bs">
-      <div class="panel-heading">
-        <h4>Sign up</h4>
+<div class="panel panel-primary devise-bs">
+  <div class="panel-heading">
+    <h4><%= t('.sign_up', :default => "Sign up") %></h4>
+  </div>
+  <div class="panel-body">
+    <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: { role: "form" }) do |f| %>
+        <div class="form-group">
+          <%= f.label :name %>
+          <%= f.text_field :name, autofocus: true, class: "form-control" %>
+        </div>
+      <div class="form-group">
+        <%= f.label :email %>
+        <%= f.email_field :email, class: "form-control" %>
       </div>
-      <div class="panel-body">
-        <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-            <%= devise_error_messages! %>
-            <p><%= f.label :name %><br/>
-              <%= f.text_field :name %></p>
-
-            <div><%= f.label :email %><br/>
-              <%= f.email_field :email %></div>
-
-            <div><%= f.label :password %><br/>
-              <%= f.password_field :password %></div>
-
-            <div><%= f.label :password_confirmation %><br/>
-              <%= f.password_field :password_confirmation %></div>
-
-            <div><%= f.submit "Sign up" %></div>
-        <% end %>
+      <div class="form-group">
+        <%= f.label :password %><br />
+        <%= f.password_field :password, class: "form-control" %>
       </div>
-
-      <%= render "devise/shared/links" %>
-    </div>
+      <div class="form-group">
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation, class: "form-control" %>
+      </div>
+      <%= f.submit t('.sign_up', :default => "Sign up"), class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
+<%= render "devise/shared/links" %>
 
   </div>
 </div>
-
-
-
-
-
-
-
