--- a/app/views/vpns/index.html.erb
+++ b/app/views/vpns/index.html.erb
@@ -1,25 +1,46 @@
-<h1>Listing vpns</h1>
+<div class='container' id="showcases" data-ctrl="vpns">
 
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Vpnid</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
 
-<% @vpns.each do |vpn| %>
-  <tr>
-    <td><%= vpn.name %></td>
-    <td><%= vpn.vpnid %></td>
-    <td><%= link_to 'Show', vpn %></td>
-    <td><%= link_to 'Edit', edit_vpn_path(vpn) %></td>
-    <td><%= link_to 'Destroy', vpn, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+  <div class="row">
+    <nav>
+      <ul class="pager">
+        <li class="previous"> <%= link_to 'New VPN', new_vpn_path %></li>
+        <li class="next"><h3 style="float: right;">Count: <span><%= @count %></span></h3></li>
+      </ul>
+    </nav>
+  </div>
 
-<br />
+  <div class="panel panel-primary">
+    <!-- Default panel contents -->
+    <div class="panel-heading">Listing vpns</div>
+    <div class="panel-body">
 
-<%= link_to 'New Vpn', new_vpn_path %>
+      <!-- Table -->
+      <table class="table table-striped table-bordered" cellspacing="0">
+        <thead>
+        <tr>
+          <th>Name</th>
+          <th>Vpnid</th>
+          <th>Show</th>
+        </tr>
+        </thead>
+
+        <% @vpns.each do |job| %>
+            <tr>
+              <td><%= vpn.name %></td>
+              <td><%= vpn.vpnid %></td>
+              <td><%= link_to 'Show', vpn %></td>
+            </tr>
+        <% end %>
+      </table>
+    </div>
+  </div>
+  <div class="pagination">
+    <%= will_paginate @vpns, :renderer => BootstrapPagination::Rails %>
+  </div>
+
+</div>
+
+
+
+
