--- a/app/views/vpns/edit.html.erb
+++ b/app/views/vpns/edit.html.erb
@@ -1,6 +1,22 @@
-<h1>Editing vpn</h1>
 
-<%= render 'form' %>
 
-<%= link_to 'Show', @vpn %> |
-<%= link_to 'Back', vpns_path %>
+<div class="row">
+  <div class="container form_panel">
+
+    <div class="panel panel-info form-bs">
+      <div class="panel-heading">
+        <h4>Editing vpn</h4>
+      </div>
+      <div class="panel-body">
+        <%= render 'form' %>
+      </div>
+
+      <%= link_to 'Show', @vpn %> |
+      <%= link_to 'Back', vpns_path %>
+    </div>
+
+  </div>
+</div>
+
+
+
