--- a/app/views/vpns/new.html.erb
+++ b/app/views/vpns/new.html.erb
@@ -1,5 +1,23 @@
-<h1>New vpn</h1>
+<div class="row">
+  <div class="container form_panel">
 
-<%= render 'form' %>
+    <div class="panel panel-info form-bs">
+      <div class="panel-heading">
+        <h4>New vpn</h4>
+      </div>
+      <div class="panel-body">
+        <%= render 'form' %>
+      </div>
 
-<%= link_to 'Back', vpns_path %>
+      </br>
+      <%= link_to 'Back', vpns_path %>
+    </div>
+
+  </div>
+</div>
+
+
+
+
+
+
