--- a/app/views/vpns/index.html.erb
+++ b/app/views/vpns/index.html.erb
@@ -25,7 +25,7 @@
         </tr>
         </thead>
 
-        <% @vpns.each do |job| %>
+        <% @vpns.each do |vpn| %>
             <tr>
               <td><%= vpn.name %></td>
               <td><%= vpn.vpnid %></td>
