--- a/app/views/googleplays/index.html.erb
+++ b/app/views/googleplays/index.html.erb
@@ -12,7 +12,7 @@
 
       <div class="crawl-info-form cif-box">
         <div class="cif-inner">
-          <h2 id="crawledItemCount">0</h2>
+          <h2 id="crawledItemCount"><%= number_with_delimiter(@count) %></h2>
           <p>Crawled Items</p>
         </div>
         <button id="exportButton" type="button" class="btn btn-success cif-button" data-loading-text="Exporting...">
