--- a/app/views/dealsdirects/index.html.erb
+++ b/app/views/dealsdirects/index.html.erb
@@ -1,43 +1,77 @@
-<h1>Listing dealsdirects</h1>
+<div class='container' id="showcases" data-ctrl="dealsdirects">
 
-<table>
-  <tr>
-    <th>Sub1</th>
-    <th>Sub2</th>
-    <th>Sub3</th>
-    <th>Url</th>
-    <th>Guid</th>
-    <th>Brand</th>
-    <th>Title</th>
-    <th>New price</th>
-    <th>Label price</th>
-    <th>Rrp text</th>
-    <th>Thumbnail</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+  <div class="row cases-export-panel">
+    <div class="col-md-8">
+      <h1>Crawling <b>DealsDirects products</b></h1>
 
-<% @dealsdirects.each do |dealsdirect| %>
-  <tr>
-    <td><%= dealsdirect.sub1 %></td>
-    <td><%= dealsdirect.sub2 %></td>
-    <td><%= dealsdirect.sub3 %></td>
-    <td><%= dealsdirect.url %></td>
-    <td><%= dealsdirect.guid %></td>
-    <td><%= dealsdirect.brand %></td>
-    <td><%= dealsdirect.title %></td>
-    <td><%= dealsdirect.new_price %></td>
-    <td><%= dealsdirect.label_price %></td>
-    <td><%= dealsdirect.rrp_text %></td>
-    <td><%= dealsdirect.thumbnail %></td>
-    <td><%= link_to 'Show', dealsdirect %></td>
-    <td><%= link_to 'Edit', edit_dealsdirect_path(dealsdirect) %></td>
-    <td><%= link_to 'Destroy', dealsdirect, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+      <div class="pagination">
+        <%= will_paginate @dealsdirects, :renderer => BootstrapPagination::Rails %>
+      </div>
+    </div>
+    <div class="col-md-4">
 
-<br />
+      <div class="crawl-info-form cif-box">
+        <div class="cif-inner">
+          <h2 id="crawledItemCount"><%= number_with_delimiter(@count) %></h2>
+          <p>Crawled Items</p>
+        </div>
+        <button id="exportButton" type="button" class="btn btn-success cif-button" data-loading-text="Exporting...">
+          Export to Excel
+        </button>
+      </div>
+    </div>
 
-<%= link_to 'New Dealsdirect', new_dealsdirect_path %>
+  </div>
+
+  <div class="row" id="cases-table">
+
+    <table class="table table-striped table-bordered" cellspacing="0" width="100%">
+      <thead>
+      <tr>
+        <th>Product</th>
+        <th>Brand</th>
+        <th>Title</th>
+        <th>new_price</th>
+        <th>label_price</th>
+        <th>Rrp text</th>
+      </tr>
+      </thead>
+
+      <% @dealsdirects.each do |dealsdirect| %>
+          <tr>
+            <td>
+
+              <%= link_to dealsdirect.url do %>
+                  <%= image_tag dealsdirect.thumbnail, class: "img-responsive" %>
+              <% end %>
+
+            </td>
+            <td><%= dealsdirect.brand %></td>
+            <td><%= dealsdirect.title %></td>
+            <td><%= dealsdirect.new_price %></td>
+            <td><%= dealsdirect.label_price %></td>
+            <td><%= dealsdirect.rrp_text %></td>
+          </tr>
+      <% end %>
+    </table>
+
+  </div>
+
+  <div class="pagination">
+    <%= will_paginate @dealsdirects, :renderer => BootstrapPagination::Rails %>
+  </div>
+
+</div>
+
+
+<script type="text/javascript" charset="utf-8">
+  (function () {
+
+    $(document).ready(function () {
+      setInterval(fetchCrawledCount, 1000);
+    });
+
+
+  }).call(this);
+</script>
+
