--- a/app/views/dealsdirects/index.html.erb
+++ b/app/views/dealsdirects/index.html.erb
@@ -2,7 +2,7 @@
 
   <div class="row cases-export-panel">
     <div class="col-md-8">
-      <h1>Crawling <b>DealsDirects products</b></h1>
+      <h1>Crawling <b>DealsDirect's products</b></h1>
 
       <div class="pagination">
         <%= will_paginate @dealsdirects, :renderer => BootstrapPagination::Rails %>
