--- a/app/views/dealsdirects/index.html.erb
+++ b/app/views/dealsdirects/index.html.erb
@@ -42,7 +42,7 @@
             <td>
 
               <%= link_to dealsdirect.url do %>
-                  <%= image_tag dealsdirect.thumbnail, class: "img-responsive" %>
+                  <%= image_tag dealsdirect.thumbnail, class: "img-responsive", id:"dealsdirect-thumbnail" %>
               <% end %>
 
             </td>
