--- a/app/views/crawlers/index.html.erb
+++ b/app/views/crawlers/index.html.erb
@@ -1,27 +1,61 @@
-<h1>Listing crawlers</h1>
+<div class='container' id="showcases" data-ctrl="Crawlers">
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Crawler name</th>
-    <th>Domain</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
 
-<% @crawlers.each do |crawler| %>
-  <tr>
-    <td><%= crawler.title %></td>
-    <td><%= crawler.crawler_name %></td>
-    <td><%= crawler.domain %></td>
-    <td><%= link_to 'Show', crawler %></td>
-    <td><%= link_to 'Edit', edit_crawler_path(crawler) %></td>
-    <td><%= link_to 'Destroy', crawler, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+  <div class="panel panel-primary">
+    <div class="panel-heading">Search Crawlers</div>
+    <div class="panel-body">
+      <%= form_tag(crawlers_path, :method => "get", id: "search-form") do %>
+          <%= text_field_tag :search, params[:search], placeholder: "Search Crawlers" %>
+          <%= submit_tag "Search" %>
+      <% end %>
+    </div>
+  </div>
 
-<br />
+  <div class="row">
+    <nav>
+      <ul class="pager">
+        <li class="previous"> <%= link_to 'New Crawler', new_crawler_path %></li>
+        <li class="next"><h3 style="float: right;">Count: <span><%= @count %></span></h3></li>
+      </ul>
+    </nav>
+  </div>
 
-<%= link_to 'New Crawler', new_crawler_path %>
+  <div class="panel panel-primary">
+    <!-- Default panel contents -->
+    <div class="panel-heading">Listing crawlers</div>
+    <div class="panel-body">
+
+      <!-- Table -->
+      <table class="table table-striped table-bordered" cellspacing="0">
+        <thead>
+        <tr>
+          <th>Title</th>
+          <th>Crawler name</th>
+          <th>Domain</th>
+          <th>Show</th>
+        </tr>
+        </thead>
+
+        <% @crawlers.each do |crawler| %>
+            <tr>
+
+              <td><%= crawler.title %></td>
+              <td><%= crawler.crawler_name %></td>
+              <td><%= crawler.domain %></td>
+              <td>
+                <%= link_to 'Show', crawler %>
+              </td>
+            </tr>
+        <% end %>
+      </table>
+    </div>
+  </div>
+  <div class="pagination">
+    <%= will_paginate @crawlers, :renderer => BootstrapPagination::Rails %>
+  </div>
+
+</div>
+
+
+
+
