--- a/app/views/crawlers/show.html.erb
+++ b/app/views/crawlers/show.html.erb
@@ -1,20 +1,35 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Title:</b>
-  <%= @crawler.title %>
-</p>
-
-<p>
-  <b>Crawler name:</b>
-  <%= @crawler.crawler_name %>
-</p>
-
-<p>
-  <b>Domain:</b>
-  <%= @crawler.domain %>
-</p>
 
 
-<%= link_to 'Edit', edit_crawler_path(@crawler) %> |
-<%= link_to 'Back', crawlers_path %>
+<div class="row">
+  <div class="container form_panel">
+    <div class="col-xs-12">
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <div class="caption">
+            <h3><%= @crawler.title %></h3>
+          </div>
+        </div>
+        <div class="panel-body">
+          <table class="table" style="padding: 0; margin: 0;">
+            <tr>
+              <td>Crawler name</td>
+              <%= @crawler.crawler_name %>
+            </tr>
+            <tr>
+              <td>Domain</td>
+              <%= @crawler.domain %>
+            </tr>
+          </table>
+        </div>
+        <div class="panel-body">
+          <%= link_to 'Back', crawlers_path, class:"btn btn-primary pull-left",type:"button" %>
+          <%= link_to 'Edit', edit_crawler_path(@crawler), class:"btn btn-success pull-right",type:"button" %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
