--- a/app/views/googleplays/index.html.erb
+++ b/app/views/googleplays/index.html.erb
@@ -42,7 +42,7 @@
           <td>
 
             <%= link_to googleplay.url do %>
-                <%= image_tag googleplay.thumbnail, class: "img-responsive" %>
+                <%= image_tag googleplay.thumbnail, class: "img-responsive" , id:"small-thumbnail"%>
             <% end %>
 
           </td>
