--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,27 +1,61 @@
-<h1>Listing tasks</h1>
+<div class='container' id="showcases" data-ctrl="tasks">
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Crawler</th>
-    <th>Commander</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+  <div class="panel panel-primary">
+    <div class="panel-heading">Search tasks</div>
+    <div class="panel-body">
+      <%= form_tag(tasks_path, :method => "get", id: "search-form") do %>
+          <%= text_field_tag :search, params[:search], placeholder: "Search tasks" %>
+          <%= submit_tag "Search" %>
+      <% end %>
+    </div>
+  </div>
 
-<% @tasks.each do |task| %>
-  <tr>
-    <td><%= task.title %></td>
-    <td><%= task.crawler_id %></td>
-    <td><%= task.commander %></td>
-    <td><%= link_to 'Show', task %></td>
-    <td><%= link_to 'Edit', edit_task_path(task) %></td>
-    <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+  <div class="row">
+    <nav>
+      <ul class="pager">
+        <li class="previous"> <%= link_to 'New Task', new_task_path %></li>
+        <li class="next"><h3 style="float: right;">Count: <span><%= @count %></span></h3></li>
+      </ul>
+    </nav>
+  </div>
 
-<br />
+  <div class="panel panel-primary">
+    <!-- Default panel contents -->
+    <div class="panel-heading">Listing tasks</div>
+    <div class="panel-body">
 
-<%= link_to 'New Task', new_task_path %>
+      <!-- Table -->
+      <table class="table table-striped table-bordered" cellspacing="0">
+        <thead>
+        <tr>
+          <th>Title</th>
+          <th>Crawler</th>
+          <th>Commander</th>
+          <th>Show</th>
+        </tr>
+        </thead>
+
+        <% @tasks.each do |crawler| %>
+            <tr>
+
+              <td><%= crawler.title %></td>
+              <td><%= crawler.crawler_id %></td>
+              <td><%= crawler.commander %></td>
+              <td>
+                <%= link_to 'Show', crawler %>
+              </td>
+            </tr>
+        <% end %>
+      </table>
+    </div>
+  </div>
+  <div class="pagination">
+    <%= will_paginate @tasks, :renderer => BootstrapPagination::Rails %>
+  </div>
+
+</div>
+
+
+
+
+
