--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,25 @@
-<h1>New task</h1>
 
-<%= render 'form' %>
 
-<%= link_to 'Back', tasks_path %>
+<div class="row">
+  <div class="container form_panel">
+
+    <div class="panel panel-info form-bs">
+      <div class="panel-heading">
+        <h4>New task</h4>
+      </div>
+      <div class="panel-body">
+        <%= render 'form' %>
+      </div>
+
+      </br>
+      <%= link_to 'Back', tasks_path %>
+    </div>
+
+  </div>
+</div>
+
+
+
+
+
+
