--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,20 +1,36 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="container form_panel">
+    <div class="col-xs-12">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h4>Task detail</h4>
+        </div>
+        <div class="panel-body">
+          <div class="caption">
+            <h3><%= @task.title %></h3>
+          </div>
+        </div>
+        <div class="panel-body">
+          <table class="table" style="padding: 0; margin: 0;">
+            <tr>
+              <td>Crawler name:</td>
+              <td><%= @crawler.name %></td>
+            </tr>
+            <tr>
+              <td>Commander:</td>
+              <td><%= @task.commander %></td>
+            </tr>
+          </table>
+        </div>
+        <div class="panel-body">
+          <%= link_to 'Back', tasks_path, class:"btn btn-primary pull-left",type:"button" %>
+          <%= link_to 'Edit', edit_task_path(@task), class:"btn btn-success pull-right",type:"button" %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-<p>
-  <b>Title:</b>
-  <%= @task.title %>
-</p>
-
-<p>
-  <b>Crawler:</b>
-  <%= @task.crawler_id %>
-</p>
-
-<p>
-  <b>Commander:</b>
-  <%= @task.commander %>
-</p>
 
 
-<%= link_to 'Edit', edit_task_path(@task) %> |
-<%= link_to 'Back', tasks_path %>
+
