--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -8,6 +8,7 @@
         <div class="panel-body">
           <div class="caption">
             <h3><%= @task.title %></h3>
+            <input class="btn btn-info pull-right" id="task_run_button" type="button" value="Run">
           </div>
         </div>
         <div class="panel-body">
@@ -23,8 +24,8 @@
           </table>
         </div>
         <div class="panel-body">
-          <%= link_to 'Back', tasks_path, class:"btn btn-primary pull-left",type:"button" %>
-          <%= link_to 'Edit', edit_task_path(@task), class:"btn btn-success pull-right",type:"button" %>
+          <%= link_to 'Back', tasks_path, class: "btn btn-primary pull-left", type: "button" %>
+          <%= link_to 'Edit', edit_task_path(@task), class: "btn btn-success pull-right", type: "button" %>
         </div>
       </div>
     </div>
