--- a/app/views/googleplays/index.html.erb
+++ b/app/views/googleplays/index.html.erb
@@ -15,7 +15,7 @@
           <h2 id="crawledItemCount"><%= number_with_delimiter(@count) %></h2>
           <p>Crawled Items</p>
         </div>
-        <button id="exportButton" type="button" class="btn btn-success cif-button" data-loading-text="Exporting...">
+        <button id="export_Button" type="button" class="btn btn-success cif-button" data-loading-text="Exporting...">
           Export to Excel
         </button>
       </div>
