--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -19,7 +19,9 @@
             </tr>
             <tr>
               <td>Commander:</td>
-              <td><%= @task.commander %></td>
+              <td>
+                <p id="task_commander"><%=raw @task.commander %></p>
+              </td>
             </tr>
           </table>
         </div>
