--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
   <section class="course-hero page-section" style="background-image: url('')" id="course-hero">
     <div class="page-section-inner container">
       <div class="hero-text-content">
-        <h1 style="padding-right: 200px;">IT'S SIMPLE AND PERSONAL FOR EVERYONE</h1>
+        <h1 style="padding-right: 200px;">Join the Scruby Crawling</h1>
         <div class="subtitle restrict-line-width">A professional, expert for crawling site with
           scrapy. Through 24X7, full-time.
         </div>
