--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -6,6 +6,8 @@
     <div class="panel-body">
       <%= form_tag(jobs_path, :method => "get", id: "search-form") do %>
           <%= text_field_tag :search, params[:search], placeholder: "Search Jobs" %>
+          <span>From:</span>
+          <%= options_for_select([["Freelance", "freelance"], ["Upwork", "upwork"]],) %>
           <%= submit_tag "Search" %>
       <% end %>
     </div>
