--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -1,12 +1,21 @@
 <div class='container' id="showcases" data-ctrl="jobs">
 
+  <div class="row">
+    <nav>
+      <ul class="pager">
+        <li class="previous"> <%= link_to 'New Proposal', new_proposal_path %></li>
+        <li class="next"><h3 style="float: right;">Count: <span><%= @count %></span></h3></li>
+      </ul>
+    </nav>
+  </div>
+
   <div class="panel panel-primary">
     <!-- Default panel contents -->
     <div class="panel-heading">Listing proposals</div>
     <div class="panel-body">
 
       <!-- Table -->
-      <table>
+      <table class="table table-striped table-bordered" cellspacing="0">
         <tr>
           <th>Title</th>
           <th>Content</th>
@@ -29,7 +38,5 @@
     <%= will_paginate @jobs, :renderer => BootstrapPagination::Rails %>
   </div>
 
-  <br/>
-  <%= link_to 'New Proposal', new_proposal_path %>
 
 </div>
