--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -7,8 +7,8 @@
       <%= form_tag(jobs_path, :method => "get", id: "search-form") do %>
           <%= text_field_tag :search, params[:search], placeholder: "Search Jobs" %>
           <span>From:</span>
-          <%= options_for_select([["Freelance", "freelance"], ["Upwork", "upwork"]],) %>
-          <%= submit_tag "Search" %>
+          <%= select :from, :from, [["Freelance", "freelance"], ["Upwork", "upwork"]] %>
+          <%= submit_tag "Search", style:"margin-left:20px" %>
       <% end %>
     </div>
   </div>
