--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -4,12 +4,7 @@
   <div class="panel panel-primary">
     <div class="panel-heading">Search jobs</div>
     <div class="panel-body">
-      <%= form_tag(jobs_path, :method => "get", id: "search-form") do %>
-          <%= text_field_tag :search, params[:search], placeholder: "Search Jobs" %>
-          <span>From:</span>
-          <%= select :from, :from, [["All","all"],["Freelance", "freelance"], ["Upwork", "upwork"]] %>
-          <%= submit_tag "Search", style:"margin-left:20px" %>
-      <% end %>
+      <%= render 'search_form' %>
     </div>
   </div>
 
@@ -27,48 +22,12 @@
     <div class="panel-heading">Listing jobs</div>
     <div class="panel-body">
 
-      <!-- Table -->
-      <table class="table table-striped table-bordered" cellspacing="0">
-        <thead>
-        <tr>
-          <th>Title</th>
-          <th>Customer</th>
-          <th>Duration</th>
-          <th>Price</th>
-          <th>From</th>
-          <th>Status</th>
-          <th>Type</th>
-          <th>Show</th>
-        </tr>
-        </thead>
+      <% if @jobs.present? %>
+          <%= render 'jobs_table' %>
+      <% else %>
+          <p>There are no jobs containing the term(s) <%= params[:search] %>.</p>
+      <% end %>
 
-        <% @jobs.each do |job| %>
-            <tr>
-              <td>
-                <%= link_to job.url do %>
-                    <%= job.title %>
-                <% end %>
-                <div class="description" style="display: none">
-                  <%= raw job.description %>
-                </div>
-              </td>
-              <td><%= job.customer %></td>
-
-              <td>
-                <%= job.startdate %>
-                -
-                <%= job.enddate %>
-              </td>
-              <td><%= job.price %></td>
-              <td><%= job.from %></td>
-              <td><%= job.status %></td>
-              <td><%= job.jobtype %></td>
-              <td>
-                <%= link_to 'Show', job %>
-              </td>
-            </tr>
-        <% end %>
-      </table>
     </div>
   </div>
   <div class="pagination">
