--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,25 +1,42 @@
-<h1>Listing categories</h1>
+<div class='container' id="showcases" data-ctrl="jobs">
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+  <div class="row">
+    <nav>
+      <ul class="pager">
+        <li class="previous"> <%= link_to 'New Proposal', new_category_path %></li>
+        <li class="next"><h3 style="float: right;">Count: <span><%= @count %></span></h3></li>
+      </ul>
+    </nav>
+  </div>
 
-<% @categories.each do |category| %>
-  <tr>
-    <td><%= category.title %></td>
-    <td><%= category.description %></td>
-    <td><%= link_to 'Show', category %></td>
-    <td><%= link_to 'Edit', edit_category_path(category) %></td>
-    <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+  <div class="panel panel-primary">
+    <!-- Default panel contents -->
+    <div class="panel-heading">Listing categories</div>
+    <div class="panel-body">
 
-<br />
+      <!-- Table -->
+      <table class="table table-striped table-bordered" cellspacing="0">
+        <tr>
+          <th>Title</th>
+          <th>Description</th>
+          <th>Show</th>
+        </tr>
 
-<%= link_to 'New Category', new_category_path %>
+        <% @categories.each do |category| %>
+            <tr>
+              <td><%= category.title %></td>
+              <td><%= raw category.description %></td>
+              <td><%= link_to 'Show', category %></td>
+            </tr>
+        <% end %>
+      </table>
+
+    </div>
+  </div>
+
+  <div class="pagination">
+    <%= will_paginate @jobs, :renderer => BootstrapPagination::Rails %>
+  </div>
+
+
+</div>
