search jobs form.

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <nav>
       <ul class="pager">
-        <li class="previous"> <%= link_to 'New Proposal', new_category_path %></li>
+        <li class="previous"> <%= link_to 'New Category', new_category_path %></li>
         <li class="next"><h3 style="float: right;">Count: <span><%= @count %></span></h3></li>
       </ul>
     </nav>
