--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,18 @@
-<h1>New category</h1>
 
-<%= render 'form' %>
+<div class="row">
+  <div class="container form_panel">
 
-<%= link_to 'Back', categories_path %>
+    <div class="panel panel-info form-bs">
+      <div class="panel-heading">
+        <h4>New category</h4>
+      </div>
+      <div class="panel-body">
+        <%= render 'form' %>
+      </div>
+
+      <%= link_to 'Back', categories_path %>
+    </div>
+
+  </div>
+</div>
+
