--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,15 +1,26 @@
-<p id="notice"><%= notice %></p>
 
-<p>
-  <b>Title:</b>
-  <%= @category.title %>
-</p>
+<div class="row">
+  <div class="container form_panel">
 
-<p>
-  <b>Description:</b>
-  <%= @category.description %>
-</p>
+    <div class="panel panel-success">
+
+      <div class="panel-heading">
+        <h4><%= @category.title %></h4>
+      </div>
+
+      <div class="panel-body">
+        <div style="padding-left: 12px;padding-top: 8px;padding-right: 4px;">
+          <b class="pull-left">Content:</b>
+          </br>
+          <%=raw @category.description %>
+        </div>
+      </div>
+
+      <%= link_to 'Back', categories_path, class:"btn btn-primary pull-left",type:"button" %>
+      <%= link_to 'Edit', edit_category_path(@category), class:"btn btn-success pull-right",type:"button" %>
+    </div>
+  </div>
+</div>
 
 
-<%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Back', categories_path %>
+
