search jobs form.

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,6 +2,15 @@
 <div class="row">
   <div class="container form_panel">
 
+    <div class="row">
+      <nav>
+        <ul class="pager">
+          <li class="previous"> <%= link_to 'Back', categories_path %></li>
+          <li class="next"><%= link_to 'Edit', edit_category_path(@category)%></li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="panel panel-success">
 
       <div class="panel-heading">
@@ -10,14 +19,14 @@
 
       <div class="panel-body">
         <div style="padding-left: 12px;padding-top: 8px;padding-right: 4px;">
-          <b class="pull-left">Content:</b>
+          <b class="pull-left">Description:</b>
           </br>
           <%=raw @category.description %>
         </div>
       </div>
 
-      <%= link_to 'Back', categories_path, class:"btn btn-primary pull-left",type:"button" %>
-      <%= link_to 'Edit', edit_category_path(@category), class:"btn btn-success pull-right",type:"button" %>
+
+
     </div>
   </div>
 </div>
