--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,6 +1,15 @@
 <div class="row">
   <div class="container form_panel">
 
+    <div class="row">
+      <nav>
+        <ul class="pager">
+          <li class="previous"> <%= link_to 'Show', @category %></li>
+          <li class="next"><%= link_to 'Back', categories_path %></li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="panel panel-info form-bs">
       <div class="panel-heading">
         <h4>Editing category</h4>
@@ -9,8 +18,6 @@
         <%= render 'form' %>
       </div>
 
-      <%= link_to 'Show', @category %> |
-      <%= link_to 'Back', categories_path %>
     </div>
 
   </div>
