--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -1,31 +1,49 @@
-<h1>Listing types</h1>
+<div class='container' id="showcases" data-ctrl="jobs">
 
-<table>
-  <tr>
-    <th>Cat</th>
-    <th>Title</th>
-    <th>Key</th>
-    <th>Value</th>
-    <th>Description</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+  <div class="row">
+    <nav>
+      <ul class="pager">
+        <li class="previous"> <%= link_to 'New Type', new_type_path %></li>
+        <li class="next"><h3 style="float: right;">Count: <span><%= @count %></span></h3></li>
+      </ul>
+    </nav>
+  </div>
 
-<% @types.each do |type| %>
-  <tr>
-    <td><%= type.cat_id %></td>
-    <td><%= type.title %></td>
-    <td><%= type.key %></td>
-    <td><%= type.value %></td>
-    <td><%= type.description %></td>
-    <td><%= link_to 'Show', type %></td>
-    <td><%= link_to 'Edit', edit_type_path(type) %></td>
-    <td><%= link_to 'Destroy', type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+  <div class="panel panel-primary">
+    <!-- Default panel contents -->
+    <div class="panel-heading">Listing types</div>
+    <div class="panel-body">
 
-<br />
+      <!-- Table -->
+      <table class="table table-striped table-bordered" cellspacing="0">
+        <tr>
+          <th>Title</th>
+          <th>Key</th>
+          <th>Value</th>
+          <th>Description</th>
+          <th>Category</th>
+          <th>Show</th>
+        </tr>
 
-<%= link_to 'New Type', new_type_path %>
+        <% @types.each do |type| %>
+            <tr>
+              <td><%= type.title %></td>
+              <td><%= type.key %></td>
+              <td><%= type.value %></td>
+              <td><%= type.description %></td>
+              <td><%= type.cat_id %></td>
+              <td><%= link_to 'Show', type %></td>
+            </tr>
+        <% end %>
+      </table>
+
+    </div>
+  </div>
+
+  <div class="pagination">
+    <%= will_paginate @types, :renderer => BootstrapPagination::Rails %>
+  </div>
+
+
+</div>
+
