--- a/app/views/types/show.html.erb
+++ b/app/views/types/show.html.erb
@@ -1,30 +1,45 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="container form_panel">
 
-<p>
-  <b>Cat:</b>
-  <%= @type.cat_id %>
-</p>
+    <div class="row">
+      <nav>
+        <ul class="pager">
+          <li class="previous"> <%= link_to 'Back', types_path %></li>
+          <li class="next"><%= link_to 'Edit', edit_type_path(@type)%></li>
+        </ul>
+      </nav>
+    </div>
 
-<p>
-  <b>Title:</b>
-  <%= @type.title %>
-</p>
+    <div class="panel panel-success">
 
-<p>
-  <b>Key:</b>
-  <%= @type.key %>
-</p>
+      <div class="panel-heading">
+        <h4><%= @type.title %></h4>
+      </div>
 
-<p>
-  <b>Value:</b>
-  <%= @type.value %>
-</p>
+      <div class="panel-body">
+        <table class="table" style="padding: 0; margin: 0;">
+          <tr>
+            <td>Key</td>
+            <td><%= @type.key %></td>
+          </tr>
+          <tr>
+            <td>Value</td>
+            <td><%= @type.value %></td>
+          </tr>
+        </table>
+        <div style="padding-left: 12px;padding-top: 8px;padding-right: 4px;">
+          <b class="pull-left">Description:</b>
+          </br>
+          <%=raw @type.description %>
+        </div>
+      </div>
 
-<p>
-  <b>Description:</b>
-  <%= @type.description %>
-</p>
 
 
-<%= link_to 'Edit', edit_type_path(@type) %> |
-<%= link_to 'Back', types_path %>
+    </div>
+  </div>
+</div>
+
+
+
+
