--- a/app/views/types/new.html.erb
+++ b/app/views/types/new.html.erb
@@ -1,5 +1,25 @@
-<h1>New type</h1>
 
-<%= render 'form' %>
+<div class="row">
+  <div class="container form_panel">
 
-<%= link_to 'Back', types_path %>
+    <div class="row">
+      <nav>
+        <ul class="pager">
+          <li class="previous"><%= link_to 'Back', types_path %></li>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="panel panel-info form-bs">
+      <div class="panel-heading">
+        <h4>New type</h4>
+      </div>
+      <div class="panel-body">
+        <%= render 'form' %>
+      </div>
+
+    </div>
+
+  </div>
+</div>
+
