search jobs form.

--- a/app/views/cats/edit.html.erb
+++ b/app/views/cats/edit.html.erb
@@ -4,8 +4,8 @@
     <div class="row">
       <nav>
         <ul class="pager">
-          <li class="previous"> <%= link_to 'Show', @category %></li>
-          <li class="next"><%= link_to 'Back', categories_path %></li>
+          <li class="previous"> <%= link_to 'Show', @cat %></li>
+          <li class="next"><%= link_to 'Back', cats_path %></li>
         </ul>
       </nav>
     </div>
