--- a/app/views/cats/new.html.erb
+++ b/app/views/cats/new.html.erb
@@ -10,7 +10,7 @@
         <%= render 'form' %>
       </div>
 
-      <%= link_to 'Back', categories_path %>
+      <%= link_to 'Back', cats_path %>
     </div>
 
   </div>
