--- a/app/views/types/show.html.erb
+++ b/app/views/types/show.html.erb
@@ -28,7 +28,7 @@
           </tr>
           <tr>
             <td>Category:</td>
-            <td><%= Category.find(@type.cat_id).title %></td>
+            <td><%= Cat.find(@type.cat_id).title %></td>
           </tr>
         </table>
         <div style="padding-left: 12px;padding-top: 8px;padding-right: 4px;">
