search jobs form.

--- a/app/views/types/edit.html.erb
+++ b/app/views/types/edit.html.erb
@@ -5,8 +5,8 @@
     <div class="row">
       <nav>
         <ul class="pager">
-          <li class="previous"> <%= link_to 'Show', @type %></li>
-          <li class="next"><%= link_to 'Back', types_path %></li>
+          <li class="previous"><%= link_to 'Back', types_path %></li>
+          <li class="next"> <%= link_to 'Show', @type %></li>
         </ul>
       </nav>
     </div>
