search jobs form.

--- a/app/views/proposals/edit.html.erb
+++ b/app/views/proposals/edit.html.erb
@@ -1,6 +1,15 @@
 <div class="row">
   <div class="container form_panel">
 
+    <div class="row">
+      <nav>
+        <ul class="pager">
+          <li class="previous"><%= link_to 'Back', proposals_path %></li>
+          <li class="next"> <%= link_to 'Show', @proposal %></li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="panel panel-info form-bs">
       <div class="panel-heading">
         <h4>Editing proposal</h4>
@@ -8,9 +17,6 @@
       <div class="panel-body">
         <%= render 'form' %>
       </div>
-
-      <%= link_to 'Show', @proposal %> |
-      <%= link_to 'Back', proposals_path %>
     </div>
 
   </div>
